add more role patterns

--- a/localization/DE.json
+++ b/localization/DE.json
@@ -1,17 +1,34 @@
 {
     "roles": [
         "[Aa]mtierender? Ratspräsident(?:in)?",
-        "Bürgerbeauftragter.*?",
+        "Amtierender? Präsident(?:in) des Rates",
+        "Bürgerbeauftragter(?:in)?",
         "Präsident(?:in)? de.+?",
         "Kommission",
         "Rat",
         "Berichterstatter(?:in)?.*?",
+        "Generalberichterstatter(?:in).*?",
         "D(?:er|ie) Präsident(?:in)?",
         "Vizepräsident(?:in)? de.+?",
         "Mitglied der Kommission",
+        "Komissionsmitglied",
         "im Namen der.+?",
         "Verfasser(?:in).*?",
-        "für die .+?Fraktion.*?"
+        "für die .+?Fraktion.*?",
+        "Vorsitzender?.*?",
+        "designierter? Präsident(?:in)?.*?",
+        "gewählter? Präsident(?:in).*?",
+        "Verfasser(?:in).*?",
+        "Hoher Vertreter für die gemeinsame Außen- und Sicherheitspolitik",
+        "Hoher Vertreter für die GASP",
+        "Rechnungshof",
+        "Sacharow-Preisträger(?:in)",
+        "Träger(?:in) des Sacharow-Preises",
+        "stellvertretender? Berichterstatter(?:in)",
+        "in Vertretung de.+?",
+        "Ko-Berichterstatter(?:in)?.*?",
+        "Ratspräsident",
+        "im Auftrag de.+?"
     ],
     "president": [
         "(?:Der )?Präsident",
