--- a/localization/EN.json
+++ b/localization/EN.json
@@ -1,26 +1,34 @@
 {
     "roles": [
         "Commission",
+        "Commissioner",
         "rapporteur",
         "Council",
-        "Member of the Commission",
+        "[Mm]ember of (?:the )?Commission",
         "President-in-Office of the Council",
         "Vice-President of the Commission",
         "[Aa]uthor",
         "President of the Commission",
         "draftsman.*?",
+        "draftsperson.*?",
         "deputising for the.+?",
         "Ombudsman",
-        ".*?on behalf of.*?",
+        ".*?(?:on )?behalf (?:on|of) .*?",
         "President of the .+?",
-        "High Representative for the Common Foreign and Security Policy",
+        "High Representative for (?:the )?Common Foreign and Security Policy",
         "rapporteur.*?",
         "Vice-President.*?",
         "President-in-Office of the",
         "President-in-Office of the Council",
         "general rapporteur",
-        "[cC]hairman of the Committee on .+?",
-        "deputy rapporteur"
+        "[cC]hairman of the .+?",
+        "[Cc]hairperson of the .+?",
+        "[Cc]hair of the .+?",
+        "for the .+? Group",
+        "deputy rapporteur",
+        "co-president of the .+?",
+        "European Parliament representative at the Intergovernmental Conference",
+        "in the name of the.+?"
     ],
     "president": ["President"],
     "in_writing": "in writing?"
