localize more role language-specific patterns
these patterns are used in a second run

--- a/localization/DE.json
+++ b/localization/DE.json
@@ -34,5 +34,9 @@
         "(?:Der )?Präsident",
         "(?:Die )?Präsidentin"
     ],
-    "in_writing": "schriftlich"
+    "in_writing": "schriftlich",
+    "more_roles": [
+        "(Rat)[\\s\\-–\\.]+",
+        "(Kommission)[\\s\\-–\\.]+"
+    ]
 }
